unpackaged/main/default/objects/OrderApi__Invoice_Installment__c/OrderApi__Invoice_Installment__c.object-meta.xml
<CustomObject>
    <description>Tracks the installments for an Invoice.</description>
    <label>Installment</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Installment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Installments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>