unpackaged/main/default/objects/OrderApi__Invoice_Installment__c/fields/OrderApi__Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Balance_Due__c</fullName>
    <description>Amount - Total Payments.</description>
    <inlineHelpText>Amount - Total Payments.</inlineHelpText>
    <label>Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>