unpackaged/main/default/objects/OrderApi__Invoice_Installment__c/fields/OrderApi__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Due_Date__c</fullName>
    <description>The date that payment is due for the installment.</description>
    <inlineHelpText>The date that payment is due for the installment.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>