unpackaged/main/default/objects/OrderApi__Invoice_Installment__c/fields/OrderApi__Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Linked to related Sales Order</description>
    <inlineHelpText>Linked to related Sales Order</inlineHelpText>
    <label>Sales Order</label>
    <referenceTo>OrderApi__Sales_Order__c</referenceTo>
    <relationshipLabel>Installments</relationshipLabel>
    <relationshipName>Invoice_Installments</relationshipName>
    <type>Lookup</type>
</CustomField>